src/style/style.css
@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;500&family=Open+Sans&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --background-color: rgba(24, 24, 27);
  --little-black: rgb(10, 10, 10);
  --primary-text-color: rgb(255, 245, 191);
  --accent-color: rgb(248, 202, 202);
  --nav-height: 8vh;
  --footer-height: 10vh;
}

body {
  background-color: var(--background-color);
  color: var(--primary-text-color);
  font-family: "Noto Sans", sans-serif;
  /* font-family: 'Open Sans', sans-serif; */
  height: 80vh !important;
}

::selection {
  background-color: var(--primary-text-color);
  color: var(--background-color);
}

a {
  text-decoration: none;
  color: inherit;
  display: inline;
}

nav ul {
  list-style: none;
  padding: 10px;
  font-size: large;
}

nav ul li {
  display: inline;
}

/* Utility Classes */

.flex {
  display: flex;
  align-items: center;
}

.grid {
  display: grid;
  align-items: center;
}

.container {
  max-width: 100vw;
  margin-inline: auto;
}

.accent {
  color: var(--accent-color);
}

.accent::selection {
  background-color: var(--accent-color);
}

.block {
  display: block;
}

.main-heading {
  font-weight: bolder;
  font-size: 48px;
  padding-block: 10px;
}

.primary-btn {
  border-style: none;
  cursor: pointer;
  padding: 10px;
  margin-top: 2rem;
  color: var(--accent-color);
  background-color: inherit;
  border: 1px solid var(--accent-color);
  border-radius: 10px;
  font-family: inherit;
  font-size: medium;
}

.primary-btn:hover {
  background-color: var(--primary-text-color);
  color: var(--little-black);
}

.underline {
  text-decoration: underline;
  text-underline-offset: 5px;
}

.sub-heading {
  text-align: center;
  margin: 20px;
}

.min-height {
  min-height: 82vh;
}

.margin-block {
  margin-block: 1rem;
}

.margin-right {
  margin-right: 0.5rem;
}

.margin-right-big {
  margin-right: 1rem;
}

.icon-provider {
  display: flex;
  gap: 0.3rem;
}

/* Scroll bar style */
::-webkit-scrollbar {
  width: 5px;
  height: 8px;
  background-color: var(--background-color);
}

::-webkit-scrollbar-thumb {
  background: var(--accent-color);
}

